syntax = "proto3";
// edition = "2024";

package portal;

option go_package = "realm.pub/tavern/portals/portalpb";

enum BytesPayloadKind {
    BYTES_PAYLOAD_KIND_UNSPECIFIED = 0;
    BYTES_PAYLOAD_KIND_DATA = 1;
    BYTES_PAYLOAD_KIND_PING = 2;
}
message BytesPayload {
    bytes data = 1;
    BytesPayloadKind kind = 2;
}
message TCPPayload {
    bytes data = 1;
    string dst_addr = 2;
    uint32 dst_port = 3;
}
message UDPPayload {
    bytes data = 1;
    string dst_addr = 2;
    uint32 dst_port = 3;
}

message Mote {
    // Unique identifier used to route reply traffic back to original port
    string stream_id = 1;

    // Ordered number for clients to reassemble an ordered stream
    uint64 seq_id = 2;

    // A payload
    oneof payload {
        UDPPayload udp = 3;
        TCPPayload tcp = 4;
        BytesPayload bytes = 5;
    }
}

message OpenPortalRequest {
    int64 portal_id = 1;
    Mote mote = 2;
}
message OpenPortalResponse {
    Mote mote = 2;
}

/*
 * Service
 */

service Portal {
    rpc OpenPortal(stream OpenPortalRequest) returns (stream OpenPortalResponse) {}
}
